Clean up and improve visicut directory detection